@@ -1,9 +1,11 @@
 Changes in 4.0:
-- Make adding multiple trackers at once possible (213194)
+- Make adding multiple trackers at once possible (213194) 
+- Bandwidth scheduler can now be deactivated temporarely
 
 Changes in 3.3.1:
 - Make sure exceptions in DHT code are caught, fixes a crash (213819)
 - Fix several memory leaks at exit
+- Fix bug in edge detection of items on the bandwidth schedule
 
 Changes in 3.3:
 - Fix deadlock in PacketReader
